added sliding window filter

--- a/app/index.html
+++ b/app/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>D3exp</title>
+    <title>Terror incidents 1968 - 2015</title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="shortcut icon" type="image/png" href="favicon.png">
@@ -14,14 +14,16 @@
     <link rel="stylesheet" href="assets/d3exp.css">
 
     {{content-for 'head-footer'}}
+    
   </head>
   <body>
+
     {{content-for 'body'}}
 
     <script src="assets/vendor.js"></script>
     <script src="assets/d3exp.js"></script>
-    <!-- <script src="//d3js.org/topojson.v1.min.js"></script> -->
 
     {{content-for 'body-footer'}}
+
   </body>
 </html>
